@@ -1,5 +1,7 @@
 2014-05-01 Matt:
 	* Committing some scripts that I forgot to a while ago. Now back to this project.
+	* Adding 3D parameterization and skeleton analysis code.
+	* Fill this in tomorrow morning using ZHS input to compare to Jaime
 
 2014-04-03 Matt:
 	* Adding script to check for transition radiation.  Simple plotting macro in scripts/
